# gentoo_bug_939168

./: CMakeLists.txt  README.md  data.proto  main.cpp
cmake/: CompileOptions.cmake
